# rules_scala

./: .bazelignore  .bazelrc  MODULE.bazel  README.md  WORKSPACE  analyze_docs_jar_nondeterminism.sh  rules_scala_maven.json  rules_scala_test_maven.json  test_dependency_versions.sh  test_dogfood.sh  test_downstream.sh  test_reproducibility.sh  test_rules_scala.sh  test_thirdparty_version.sh  test_version.sh  update_lockfiles.sh
.bazelci/: downstream.yml  presubmit.yml
.bcr/: presubmit.yml
.github/workflows/: publish-to-bcr.yml  release.yml
docs/: cross-compilation.md  scala_toolchain.md  scala_toolchain_plugins.md  scalac_exec_group.md  toolchain_development.md
dt_patches/: dt_patch_test.sh
dt_patches/compiler_sources/: MODULE.bazel  extensions.bzl
dt_patches/test_dt_patches/: MODULE.bazel  WORKSPACE
dt_patches/test_dt_patches_user_srcjar/: BUILD  MODULE.bazel  WORKSPACE
examples/crossbuild/: MODULE.bazel  WORKSPACE
examples/crossbuild/3_select/: BUILD
examples/overridden_artifacts/: MODULE.bazel  WORKSPACE
examples/scala3/: MODULE.bazel  WORKSPACE
examples/semanticdb/: MODULE.bazel  WORKSPACE
examples/testing/multi_frameworks_toolchain/: BUILD  MODULE.bazel  WORKSPACE  maven.json
examples/testing/multi_frameworks_toolchain/example/: Specs2ExampleTest.scala
examples/testing/scalatest_repositories/: MODULE.bazel  WORKSPACE
examples/testing/specs2_junit_repositories/: MODULE.bazel  WORKSPACE
examples/twitter_scrooge/: MODULE.bazel
jmh/: jmh.bzl
jmh/toolchain/: toolchain.bzl
manual_test/coverage_local_jacocorunner/: BUILD
protoc/: BUILD
protoc/private/: toolchain_impl.bzl
scala/: deps.bzl  latest_deps.bzl  scala.bzl  scala_cross_version.bzl  scala_toolchain.bzl  toolchains.bzl  toolchains_repo.bzl
scala/extensions/: deps.bzl
scala/private/: common.bzl  create_toolchain_metadata.bzl  rule_impls.bzl
scala/private/extensions/: dev_deps.bzl
scala/private/macros/: compiler_sources_integrity.bzl  scala_repositories.bzl  setup_scala_toolchain.bzl  workspace_compat.bzl
scala/private/phases/: phase_compile.bzl  phase_semanticdb.bzl
scala/scalafmt/: scalafmt_repositories.bzl
scala/support/: BUILD
scala_proto/default/: default_deps.bzl
scala_proto/private/: scala_proto_aspect.bzl
scripts/: README.md  create_repository.py  ij.bazelproject  update_compiler_sources_integrity.py
scripts/build_jacocorunner/: 0001-Build-Jacoco-for-Bazel-9.0.patch  build_jacocorunner.sh
specs2/: BUILD  specs2.bzl  specs2_junit.bzl
src/gazelle/private/scalaparser/: BUILD.bazel  parser.go  parser_test.go
test/: BUILD  check_statsfile.bzl  expected_unused_dependency_checker_warning.txt
test/community_build/: BUILD  README.md  dicer_protobuf_version.patch  downstream_repository.bzl  downstream_test.bzl  downstream_test_driver.sh  joern_resolve_timeout.patch
test/compiler_dependency_tracker/: BUILD  expected_missing_compile_dep.txt  expected_missing_source_dep.txt  expected_unused_dep.txt  rejected_remove_deps.txt
test/compiler_sources_integrity/: MODULE.bazel  WORKSPACE
test/coverage_filename_encoding/: Test.scala
test/coverage_specs2_with_junit/: TestWithSpecs2WithJUnit.scala
test/expect_build_failure/: BUILD  expect_build_failure.bzl  expect_build_failure.sh  nested_bazel.sh
test/java_in_src_jar/: BUILD  JavaSource.java  expected_java_in_srcjar.txt
test/jmh/: BUILD
test/macros/: BUILD  MacroExportUser.scala  expect_no_ijar.sh  expected_macro_expansion_failure.txt  expected_stack_overflow_failure.txt  incorrect_macro_user_expected_error.txt  rejected_worker_crash.txt
test/mismatching_resource_strip_prefix/: BUILD  expected_mismatching_prefix.txt
test/persistent_worker/: BUILD  Broken.scala
test/proto_source_root/: BUILD
test/scala_export/: BUILD  Dependency.scala  DeployEnvDependency.scala  ExternalDependency.scala  Main.scala  check-deploy-env.sh  scaladocs.golden.txt
test/scala_junit_test/: BUILD  expected_specs2_user_exception.txt
test/scala_library_suite/: BUILD  DependsOnSibling.scala  Sibling.scala  expected_dep_on_sibling.txt  expected_invalid_scala.txt
test/scala_proto_failing_generator/: BUILD  expected_generator_failure.txt
test/scala_test/: BUILD
test/scala_test_env_inherit/: BUILD  SpacedEnvTest.scala  expected_missing_env.txt
test/scala_test_testfilter/: BUILD  C.scala  expected_method_unfiltered_failure.txt  expected_unfiltered_failure.txt
test/scalacopts_invalid/: BUILD  Empty.scala  expected_bad_option.txt  expected_failed_to_invoke.txt  expected_not_valid_choice.txt  rejected_scalacworker_stacktrace.txt
test/semanticdb/: BUILD
test/shell/: scala_versions.sh  test_bzlmod_macros.sh  test_compiler_dependency_tracking.sh  test_compiler_sources_integrity.sh  test_dogfood.sh  test_downstream.sh  test_examples.sh  test_invalid_scalacopts.sh  test_junit.sh  test_macros.sh  test_misc.sh  test_persistent_worker.sh  test_scala_jacocorunner.sh  test_scala_jvm_flags.sh  test_scala_library.sh  test_scala_library_jar.sh  test_scala_proto_library.sh  test_scala_specs2.sh  test_scalac_exec_group.sh  test_scalac_jvm_flags.sh  test_semanticdb.sh  test_strict_dependency.sh  test_toolchain_deps.sh  test_unused_dependency.sh
test/toolchain_plugins/: BUILD.bazel  CombinedPluginsTest.scala  GlobalPluginTest.scala  KindProjectorTest.scala  NoPlugin.scala  README.md  RequiresPlugin.scala  SimplePluginTest.scala  test_toolchain_plugins.sh  test_without_toolchain.sh
test/unused_dependency_checker/: BUILD
test_cross_build/: MODULE.bazel  WORKSPACE
test_cross_build/scalafmt/: BUILD
test_cross_build/version_specific/: BUILD
test_expect_failure/plus_one_deps/: BUILD.bazel
test_expect_failure/scala_junit_test/: BUILD
test_expect_failure/scalac_exec_group_on_aspect_rule/: BUILD
test_version/: MODULE.bazel.template
test_version/version_specific_tests_dir/: BUILD  Exported.scala  HelloLib.scala  MacroTest_3.scala  ScalaBinary.scala
testing/: testing.bzl
testing/toolchain/: BUILD
tools/: bazel.rc.buildkite
twitter_scrooge/: twitter_scrooge.bzl
twitter_scrooge/toolchain/: toolchain.bzl
(+85 files in other folders)
