load("//scala:scala_toolchain.bzl", "scala_toolchain")

scala_toolchain(
    name = "plus_one_deps_impl",
    dependency_mode = "plus-one",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "plus_one_deps",
    toolchain = "plus_one_deps_impl",
    toolchain_type = "//scala:toolchain_type",
    visibility = ["//visibility:public"],
)
